--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
 
         <link rel="stylesheet" href="css/facha.css">
+        <link rel="icon" type="image/x-icon" href="img/ww.png">
+
         <meta charset="utf-8">
         <style>
           .boton {font-family: font-family, 'Lato', sans-serif;
